<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>slam_gmapping</name>
    <version>0.0.0</version>
    <description>Slam Gmapping on ROS2 Bouncy</description>
    <maintainer email="shiveshkhaitan@gmail.com">shivesh</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>openslam_gmapping</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
